<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paradex</string>
    <string name="sync_database">Checking for new data</string>

    <string name="content_authority" translatable="false">net.mononz.paragon</string>
    <string name="sync_account_type" translatable="false">paragon.mononz.net</string>


    <!-- Main UI -->

    <string name="close">Close</string>
    <string name="okay">OK</string>

    <string name="widget_featured">Featured Hero</string>

    <string name="snack_no_internet">Could not update data, no internet access detected</string>


    <!-- Settings Page -->

    <string name="settings_title">Settings</string>

    <string name="pref_title_option">Options</string>

    <string name="pref_images_key" translatable="false">pref_images</string>
    <string name="pref_sync_key" translatable="false">pref_sync</string>
    <string name="pref_legal_key" translatable="false">pref_legal</string>
    <string name="pref_email_key" translatable="false">pref_email</string>

    <string name="pref_images">Images</string>
    <string name="pref_images_summary">Images playing up? Click here to clear the image cache</string>

    <string name="pref_images_toast">Image cache cleaned up</string>
    <string name="pref_sync">Update data</string>
    <string name="pref_sync_summary">Force the database to be refreshed now</string>

    <string name="pref_title_about">About</string>

    <string name="pref_legal_summary">Legal Disclaimer</string>
    <string name="pref_legal_toast">This tool is not created, sponsored by or endorsed by Epic Games.\n\nThis tool is not official and is not connected to the games developer or publisher. All in-game names, descriptions and imagery are copyright and/or trademark to their respective owners and usage for this game service falls within fair usage guidelines.\n\nThis app is created by players for players.\n\nDownload the game from www.epicgames.com/paragon and start playing!</string>
    <string name="pref_legal_download">Download</string>
    <string name="pref_legal_download_link">https://www.epicgames.com/paragon/</string>

    <string name="pref_rate">Rate my app</string>
    <string name="pref_rate_summary">Like this free app? Your 5-star ratings always motivate me to do more</string>
    <string name="pref_rate_link">https://play.google.com/store/apps/details?id=net.mononz.paragon</string>

    <string name="pref_development">Development Progress</string>
    <string name="pref_development_summary">Check out my Trello board for features that are almost ready</string>
    <string name="pref_development_link">https://trello.com/b/37vrBeM6</string>

    <string name="pref_title_support">Bugs &amp; Feedback</string>

    <string name="pref_twitter">Twitter</string>
    <string name="pref_twitter_summary">I tweet somewhat regularly at @mononz_apps. Follow me for upcoming features</string>
    <string name="pref_twitter_link">https://twitter.com/mononz_apps</string>

    <string name="pref_email">Email me</string>
    <string name="pref_email_summary">I appreciate all feedback whether it be good or bad. Flick me an email at apps@mononz.com and let me know what I can do better (English only please)</string>
    <string name="settings_email_address">apps@mononz.com</string>
    <string name="settings_email_subject">Paradex - App Report</string>
    <string name="settings_email_body">Please be as descriptive as possible when submitting bug reports, feedback or feature requests.\n\n -></string>
    <string name="settings_email_choose">Choose an Email client :</string>


    <!-- Coming soon page -->

    <string name="coming_soon">Coming Soon</string>

    <string name="soon_character">Personal Character Stats</string>
    <string name="soon_character_1">Look up your own character stats/progress</string>
    <string name="soon_character_2">Unfortunately The public api not available yet so this feature is delayed until then. Please be patient</string>

    <string name="soon_hero">Heroes</string>
    <string name="soon_hero_1">Tips, Guides, Counters, Strategies</string>
    <string name="soon_hero_2">Statistics (Base + level gains)</string>
    <string name="soon_hero_3">Sorting / Filtering</string>

    <string name="soon_card">Cards</string>
    <string name="soon_card_1">All in game cards listed</string>
    <string name="soon_card_2">Deck builder</string>

    <string name="soon_map">Map</string>
    <string name="soon_map_1">Locations overview</string>
    <string name="soon_map_2">Key points of interest</string>

    <string name="soon_guides">Guides</string>
    <string name="soon_guides_1">For new players</string>
    <string name="soon_guides_2">Tips increase MMR</string>



    <!-- Detail Pages -->

    <string name="menu_detail_epic">Epic Games</string>
    <string name="menu_detail_spotlight">Hero Spotlight</string>

    <string name="hero_info_tagline">Tagline</string>
    <string name="hero_info_role">Recommended Role</string>
    <string name="hero_info_attack">Attack Type</string>
    <string name="hero_info_scaling">Primary Scaling</string>

    <string name="hero_info_affinities">Affinities</string>
    <string name="hero_info_basic">Basic Stats</string>
    <string name="hero_info_abilities">Abilities</string>

    <string name="hero_stats_attack">Basic Attack Power</string>
    <string name="hero_stats_ability">Ability Attack Power</string>
    <string name="hero_stats_durability">Durability</string>
    <string name="hero_stats_mobility">Mobility</string>
    <string name="hero_stats_difficulty">Difficulty</string>


    <!-- Content Descriptions -->

    <string name="description_hotkey_computer">Computer hotkey</string>
    <string name="description_ability_icon">Ability Icon</string>
    <string name="description_hotkey_playstation">Playstation hotkey</string>
    <string name="description_affinity">Hero affinity</string>
    <string name="description_hero_avatar">Hero avatar</string>


    <!-- Analytics -->

    <string name="analytics_screen_main">Main</string>
    <string name="analytics_screen_settings">Settings</string>
    <string name="analytics_screen_soon">Coming Soon</string>
    <string name="analytics_screen_detail_">Hero: </string>


    <!-- Google Play Services - Admob -->

    <string name="test_device">92F64085265F89AD88C43A7E749B8E5F</string>
    <string name="adunit_main">ca-app-pub-8226253452219521/9938083298</string>
    <string name="adunit_detail">ca-app-pub-8226253452219521/2414816494</string>


</resources>