<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewSemiDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_card_half_padding">

                    <TextView
                        style="@style/DetailSubhead"
                        android:text="@string/soon_character" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_character_1" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_character_2" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewSemiDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_card_half_padding">

                    <TextView
                        style="@style/DetailSubhead"
                        android:text="@string/soon_hero" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_hero_1" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_hero_2" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_hero_3" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewSemiDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_card_half_padding">

                    <TextView
                        style="@style/DetailSubhead"
                        android:text="@string/soon_card" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_card_1" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_card_2" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewSemiDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_card_half_padding">

                    <TextView
                        style="@style/DetailSubhead"
                        android:text="@string/soon_map" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_map_1" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_map_2" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewSemiDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/default_card_half_padding">

                    <TextView
                        style="@style/DetailSubhead"
                        android:text="@string/soon_guides" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_guides_1" />

                    <TextView
                        style="@style/DetailBody1"
                        android:text="@string/soon_guides_2" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>